# g3

./: config.coach-player.example.toml  config.example.toml
crates/g3-cli/: Cargo.toml
crates/g3-cli/src/: lib.rs  machine_ui_writer.rs  ui_writer_impl.rs
crates/g3-cli/tests/: coach_feedback_extraction_test.rs
crates/g3-config/: Cargo.toml
crates/g3-config/src/: lib.rs
crates/g3-config/tests/: test_multiple_tool_calls.rs
crates/g3-core/src/: lib.rs  prompts.rs  ui_writer.rs
crates/g3-core/tests/: todo_staleness_test.rs
crates/g3-ensembles/src/: flock.rs
crates/g3-providers/src/: anthropic.rs  databricks.rs
